fix profile text spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,6 +48,10 @@ body {
   max-width: 500px;
 }
 
+p.card-text {
+  margin: 100px;
+}
+
 a {
   color: white;
   padding: 20px
